# binaryen

./: .bazelrc  .clang-format  .clang-tidy  .clang-tidy-ignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .npmignore  .ruff.toml  .travis.yml  2  BUILD  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  Contributing.md  Dockerfile  LICENSE  METADATA  MODULE.bazel  README.md  ROADMAP.md  S2R  Veneno.iot  WORKSPACE  WORKSPACE.bazel  a.out  a.py  a.txt  a.wasm  appveyor.yml  auto_update_tests.py  build-alpine.sh  build-asan.sh  build-js.sh  build-static.sh  build.sh  check.py  (+34 more)
src/: CMakeLists.txt  WebAsmReader.h  asm2wasm-main.cpp  asm2wasm.h  asm_v_wasm.h  ast_utils.h  binaryen-c.autogen.cpp  binaryen-c.autogen.h  binaryen-c.cpp  binaryen-c.h  binaryen-embind.cpp  binaryen-embind.h  binaryen-js.cpp  binaryen-shell.cpp  bits.h  command-line.h  compiler-support.h  float-clamp.h  gen-s-parser.inc  leb.h  literal.h  mixed_arena.h  parsing.h  pass.cpp  pass.h  pretty_printing.h  s2wasm-main.cpp  s2wasm.h  shared-constants.h  shell-interface.h  source-map.h  wasm-annotations.h  wasm-as.cpp  wasm-binary.h  wasm-builder.h  wasm-debug.h  wasm-delegations-fields.def  wasm-delegations-fields.h  wasm-delegations.def  wasm-delegations.h  (+34 more)
src/abi/: abi.h  js.h  stack.h  wasm-object.h
src/analysis/: CMakeLists.txt  bits-bounds-lattice.h  bits-bounds-transfer-function.h  bits-lattice.h  cfg-impl.h  cfg.cpp  cfg.h  lattice.h  liveness-transfer-function.h  monotone-analyzer-impl.h  monotone-analyzer.cpp  monotone-analyzer.h  powerset-lattice-impl.h  powerset-lattice.cpp  reaching-definitions-transfer-function.h  sign-lattice.cpp  stack-lattice.h  transfer-function.h  visitor-transfer-function.h
src/asmjs/: CMakeLists.txt  asm_v_wasm.cpp  asmangle.cpp  asmangle.h  shared-constants.cpp  shared-constants.h
src/ast/: CMakeLists.txt  ExpressionAnalyzer.cpp  ExpressionManipulator.cpp  LocalGraph.cpp  bits.h  block-utils.h  branch-utils.h  cost.h  count.h  effects.h  find_all.h  global-utils.h  hashed.h  import-utils.h  label-utils.h  literal-utils.h  load-utils.h  local-graph.h  localize.h  manipulation.h  memory-utils.h  memory.h  module-utils.h  properties.h  trapping.h  type-updating.h
src/cfg/: CMakeLists.txt  DomTree.cpp  Relooper.cpp  Relooper.h  cfg-traversal.h  domtree.h  liveness-traversal.h
src/dataflow/: builder.h  graph.h  node.h  users.h  utils.h
src/debugging/: Binary.cpp  BinaryenDebugging.cpp  CMakeLists.txt  DWARFContext.cpp  DWARFEmitter.cpp  Debugging.cpp  ManagedStatic.cpp  Path.cpp  WithColor.cpp  debugging.h  dwarf2yaml.cpp  raw_ostream.cpp  readme.txt
src/emscripten-optimizer/: CMakeLists.txt  colors.h  istring.h  optimizer-shared.cpp  optimizer.h  parser.cpp  parser.h  simple_ast.cpp  simple_ast.h  snprintf.h
src/gtest/: source-map.cpp  stringify.cpp  type-builder.cpp
src/interpreter/: CMakeLists.txt  exception.h  expression-iterator.cpp  expression-iterator.h  interpreter.cpp  interpreter.h  store.h
src/ir/: CMakeLists.txt  ExpressionAnalyzer.cpp  ExpressionManipulator.cpp  LocalGraph.cpp  LocalStructuralDominance.cpp  ReFinalize.cpp  StackUtils.cpp  abstract.cpp  abstract.h  bits.h  block-utils.h  boolean.h  branch-hints.h  branch-utils.h  child-typer.h  closed-world.cpp  closed-world.h  compare-expressions.generated.h  constraint.cpp  constraint.h  cost.h  count.h  debug.cpp  debug.h  debuginfo.cpp  debuginfo.h  drop.cpp  drop.h  effects.cpp  effects.h  eh-utils.cpp  eh-utils.h  element-utils.h  equivalent_sets.h  export-utils.cpp  export-utils.h  features.h  find_all.h  flat.h  function-type-utils.h  (+82 more)
src/js/: binaryen.idl  binaryen.js-extended.js  binaryen.js-extern-post.js  binaryen.js-extern-pre.js  binaryen.js-post.js  binaryen.js-pre.js  binaryen.jsoo-extern-pre.js  post.js  wasm.js-post.js  webidl.h
src/llvm/: readme.txt
src/llvm_dwarf/: CMakeLists.txt  DWARFContext.cpp  Debug.cpp  ErrorHandling.cpp  MemoryBuffer.cpp  ObjectFile.cpp  Path.cpp  StringRef.cpp  SymbolicFile.cpp  Triple.cpp  UnicodeCaseFold.cpp  WithColor.cpp  dwarf2yaml.cpp  raw_ostream.cpp
src/parser/: CMakeLists.txt  common.h  context-decls.cpp  context-defs.cpp  contexts.h  input-impl.h  input.h  lexer.cpp  lexer.h  parse-1-decls.cpp  parse-2-typedefs.cpp  parse-3-implicit-types.cpp  parse-4-module-types.cpp  parse-5-defs.cpp  parsers.h  wast-parser.cpp  wat-parser-internal.h  wat-parser.cpp  wat-parser.h
src/passes/: AbstractTypeRefining.cpp  AddFuzzImports.cpp  AddThrows.cpp  AlignmentLowering.cpp  AssignmentOfSelectToBranch.cc  Asyncify.cpp  AutoBatch.cpp  AvoidReinterprets.cpp  BranchHintAnalysis.cpp  Bysyncify.cpp  CMakeLists.txt  CallArgumentOptimization.cpp  CastRefining.cpp  CoalesceLocals.cpp  CodeFolding.cpp  CodePushing.cpp  ConstHoisting.cpp  ConstantFieldPropagation.cpp  ConstantPropagation.cpp  ConstraintAnalysis.cpp  DWARF.cpp  DWARFDump.cpp  DataFlowOpts.cpp  DeAlign.cpp  DeNaN.cpp  DeadArgumentElimination.cpp  DeadArgumentElimination2.cpp  DeadCodeElimination.cpp  DeadStoreElimination.cpp  DebugLocationPropagation.cpp  Directize.cpp  DropReturnValues.cpp  DuplicateFunctionElimination.cpp  DuplicateImportElimination.cpp  EmscriptenPIC.cpp  EnableSharedMemory.cpp  EncloseWorld.cpp  ExceptionOpts.cpp  ExtractFunction.cpp  Flatten.cpp  (+188 more)
src/prebuilt/: wasm2c_atomicops_source_declarations.cc  wasm2c_header_bottom.cc  wasm2c_header_top.cc  wasm2c_simd_source_declarations.cc  wasm2c_source_declarations.cc  wasm2c_source_includes.cc  wasm2c_spec_top.cc
src/support/: CMakeLists.txt  alloc.h  archive.cpp  archive.h  base64.h  bits.cpp  bits.h  bitset.h  colors.cpp  colors.h  command-line.cpp  command-line.h  coroutine.h  debug.cpp  debug.h  defaults.h  delta_debugging.h  dfa_minimization.cpp  dfa_minimization.h  disjoint_sets.h  div-by-const.cpp  div-by-const.h  file.cpp  file.h  graph_traversal.h  hash.h  hash_deterministic.h  index.h  inplace_vector.h  insert_ordered.h  insertion_order.h  int128.cpp  int128.h  intervals.cpp  intervals.h  istring.cpp  istring.h  json.cpp  json.h  learning.h  (+45 more)
src/templates/: normal.js  wasm.js  wasm2c_spec.top.c  (+2 more)
(+5860 files in other folders)
